--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 <body>
     <h1>dmeo</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit natus neque consequatur non ipsa pariatur veritatis
+        cumque sint hic tempore iusto molestiae illum doloremque nisi totam nobis eum, quia itaque.</p>
 
 </body>
 
